2008-01-01  Tim Retout  <diocles@gnu.org>

	* ChangeLog: Run M-x change-log-redate. Add copyright notice at end.

1999-08-26  Markku Rossi  <mtr@amme.ssh.fi>

	* a2ps.hdr: Some updates by John Hutchison
	<John.Hutchison@lmco.com>.

1998-12-29  Markku Rossi  <mtr@amme.ssh.fi>

	* enscript-color.hdr: New enscript-styled header for color
	printers.

1998-12-23  Markku Rossi  <mtr@amme.ssh.fi>

	* Makefile.am: Added ISO-8859-{9,10} encodings.

1998-11-25  Markku Rossi  <mtr@amme.ssh.fi>

	* squeeze.hdr: New header to maximize the amount of code that can
	be printed on a page.

1998-10-26  Markku Rossi  <mtr@ngs.fi>

	* enscript.cfg.in (StatesPath): As a default, do not define.
	Enscript gives us a better default.

1998-10-23  Markku Rossi  <mtr@ngs.fi>

	* enscript.cfg.in: Changed to use the new highlighting style.

1998-10-16  Markku Rossi  <mtr@ngs.fi>

	* enscript.pro: New procedures MF_PS and SUF_PS to define a new
	user font preserving the font's default encoding.

1998-07-31  Markku Rossi  <mtr@ngs.fi>

	* enscript.cfg.in: Added 0.5 cm to left and right margins in the
	Letter media.

1998-06-23  Markku Rossi  <mtr@ngs.fi>

	* enscript.cfg.in (PostScriptLevel): Added option to control the
	PostScript language level that enscript uses for its output.

1998-06-11  Markku Rossi  <mtr@ngs.fi>

	* Renamed ISO-8859-* encodings.

1998-03-25  Markku Rossi  <mtr@ngs.fi>

	* Makefile.am (EXTRA_DIST): Added Makefile-encodings and
	make-encoding.pl.

	* latin7.enc: Added ISO-8859/7 encoding.  Thanks to Manolis
	Lourakis <lourakis@csd.uch.gr>.

1998-01-02  Markku Rossi  <mtr@ngs.fi>

	* enscript.cfg.in (GeneratePageSize): Added option to control
	whether the PageSize page device setting is generated to the
	output.

1997-09-30  Markku Rossi  <mtr@ngs.fi>

	* latin4.enc: Added ISO-8859/4 encoding.  Thanks to Ricardas Cepas
	<rch@pub.osf.lt>.

1997-08-27  Markku Rossi  <mtr@ngs.fi>

	* enscript.pro (wrapped_line_mark): fixed `arrow' marker, now it
	looks good.
